tests/negative/traits/method_not_in_trait.orng
trait My_Trait { 
    fn g() -> ()
}

impl My_Trait for Int {
    fn f() -> () { }
}

fn main() -> Int {
    4
}